# bazel_playground

./: .bazelrc  .gitignore  MODULE.bazel  README.md  maven_install.json
toolchain/java/: BUILD  Hello.java
toolchain/python/: BUILD  python.py  requirements.in  requirements_lock.txt
