bazel_dep(name = "rules_python", version = "0.26.0")

# Unneeded if using pip_parse
# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     python_version = "3.11",
#     is_default = True
# )
# use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.11",
    requirements_lock = "//toolchain/python:requirements_lock.txt",
)

use_repo(pip, "my_deps")

