bazel_dep(name = "rules_python", version = "0.32.2")
bazel_dep(name = "rules_jvm_external", version = "6.1")

# Unneeded if using pip_parse
# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
# python.toolchain(
#     python_version = "3.11",
#     is_default = True
# )
# use_repo(python, "python_versions")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "my_deps",
    python_version = "3.11",
    requirements_lock = "//toolchain/python:requirements_lock.txt",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.json:json:20240303",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    lock_file = "//:maven_install.json",
)

use_repo(maven, "maven")
use_repo(pip, "my_deps")
